# AarninOlioSimulaattori-Python

./: README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  diagrammi.md  guide.md  työtunnit.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: run_program.py
src/data/: process_data.py  read_data.py
src/data/local/: example.txt
src/gui/: gui_manager.py
src/logic/: floor_logic.py  path_logic.py
src/tests/: floor_logic_test.py  path_logic_test.py  read_data_test.py
src/ui/: user_inputs.py
src/ui/gui/: gui_manager.py
